--- a/doc/README.tex
+++ b/doc/README.tex
@@ -22,7 +22,7 @@
 
 
 \author{Karsten Ballüder \char`\\{}\char`\\{}(\texttt{Ballueder@usa.net})\char`\\{}\char`\\{}Contact
-us: \texttt{m-developers@makelistcom}}
+us: \texttt{mahogany-developers@lists.sourceforge.net}}
 
 \maketitle
 \begin{abstract}
@@ -58,7 +58,7 @@ Quite some already, but more are still missing. What we have so far:
 \begin{itemize}
 \item Cross-platform. M compiles on a variety of Unix systems and on Microsoft Windows.
 Use one mail client, no matter what system you use. The source and binary for
-Windows 95/98/NT are available on request (\texttt{m-developers@makelist.com}).
+Windows 95/98/NT are available on request (\texttt{mahogany-developers@lists.sourceforge.net}).
 Mailbox file formats are the same on both platforms.
 \item Based on the c-client library from the University of Washington, therefore full
 access to a wide range of protocols and file formats, including SMTP, MAP, POP3,
@@ -162,9 +162,9 @@ Intel.
 \section{Online resources}
 
 \begin{itemize}
-\item M has a homepage at \texttt{http://Ballueder.home.ml.org/M/} 
-\item The wxWindows homepage is \texttt{http://web.ukonline.co.uk/julian.smart/}
-\item wxGTK, the GTK port of wxWindows, is available from \texttt{http://www.freiburg.linux.de/\~{}wxxt/}
+\item M has a homepage at \texttt{http://www.wxwindows.org/Mahogany/} 
+\item The wxWindows homepage is \texttt{http://www.wxwindows.org/}
+\item wxGTK, the GTK port of wxWindows, is available from \texttt{http://www.wxwindows.org/dl_gtk.htm}
 \end{itemize}
 
 \section{FAQ}
