--- a/locale/it.po
+++ b/locale/it.po
@@ -9,7 +9,7 @@ msgstr ""
 "POT-Creation-Date: 2000-05-15 21:26+0100\n"
 "PO-Revision-Date: 1999-01-11 23:23+0000\n"
 "Last-Translator: Julia C. Nitti <julia@cheerful.com>\n"
-"Language-Team: M-developers <m-developers@makelist.com>\n"
+"Language-Team: M-developers <mahogany-developers@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8-bit\n"
@@ -258,7 +258,7 @@ msgstr "Mahogany: Aperçu d'impression"
 #: upgrade.cpp:1049
 #, c-format
 msgid ""
-"From: m-users-subscribe@egroups.com\n"
+"From: mahogany-users-request@lists.sourceforge.net\n"
 "Subject: Welcome to Mahogany!\n"
 "Date: %s\n"
 "\n"
@@ -274,10 +274,10 @@ msgid ""
 "\n"
 "Please visit our web pages at http://www.wxwindows.org/Mahogany/\n"
 "\n"
-"Also, reply to this e-mail message and you will automatically be\n"
-"added to the mailing list of Mahogany users, where you will find\n"
-"other users happy to share their experiences with you and help you\n"
-"get started.\n"
+"Also, reply to this e-mail message with 'subscribe'in the subject line\n"
+"or in the body of the message and you will automatically be added\n"
+"to the mailing list of Mahogany users, where you will find other users\n"
+"happy to share their experiences with you and help you get started.\n"
 "\n"
 "Your Mahogany Developers Team\n"
 msgstr ""
@@ -999,7 +999,7 @@ msgid ""
 "Thank you!"
 msgstr ""
 "L'application se termine d'une façon anormale.\n"
-"Envoyez vos reports de bogues à m-developers@makelist.com s'il vous plaît,\n"
+"Envoyez vos reports de bogues à mahogany-developers@lists.sourceforge.net s'il vous plaît,\n"
 "Merci pour votre support!"
 
 #: wxMApp.cpp:356
@@ -1085,7 +1085,7 @@ msgid ""
 "An unrecoverable internal error has occured.\n"
 "The application will shut down now. Please take\n"
 "a note of the error message and report it to\n"
-"m-developers@egroups.com\n"
+"mahogany-developers@lists.sourceforge.net\n"
 "\n"
 "Internal error message:\n"
 "\n"
