--- a/locale/es.po
+++ b/locale/es.po
@@ -7,7 +7,7 @@ msgstr ""
 "POT-Creation-Date: 1999-06-21 10:08+0100\n"
 "PO-Revision-Date: 1999-01-11 23:23+0000\n"
 "Last-Translator: Juan Pablo Ordonez <juordone@openway.com.co>\n"
-"Language-Team: M-Team <m-developers@makelist.com>\n"
+"Language-Team: M-Team <mahogany-developers@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8-bit\n"
@@ -483,11 +483,11 @@ msgstr " De: "
 #: wxMApp.cpp:210 wxMApp.cpp:214
 msgid ""
 "The application is terminating abnormally.\n"
-"Please report the bug to m-developers@makelist.com\n"
+"Please report the bug to mahogany-developers@lists.sourceforge.net\n"
 "Thank you!"
 msgstr ""
 "La aplicacion esta terminando anormalmente.\n"
-"Por favor reporte el bug a m-developers@makelist.com\n"
+"Por favor reporte el bug a mahogany-developers@lists.sourceforge.net\n"
 "Gracias!"
 
 # wxMainFrame.cpp:280 wxMainFrame.cpp:286
