--- a/locale/nl.po
+++ b/locale/nl.po
@@ -5,7 +5,7 @@ msgstr ""
 "POT-Creation-Date: 2000-06-11 14:55+0100\n"
 "PO-Revision-Date: 2000-01-30 19:50+0200\n"
 "Last-Translator: Arthur Muller <muller@cybercomm.nl>\n"
-"Language-Team: M-Team <m-developers@makelist.com>\n"
+"Language-Team: M-Team <mahogany-developers@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8-bit\n"
@@ -337,7 +337,7 @@ msgstr "Mahogany Installatie"
 #: upgrade.cpp:1091
 #, c-format
 msgid ""
-"From: m-users-subscribe@egroups.com\n"
+"From: mahogany-users-request@lists.sourceforge.net\n"
 "Subject: Welcome to Mahogany!\n"
 "Date: %s\n"
 "\n"
@@ -353,10 +353,10 @@ msgid ""
 "\n"
 "Please visit our web pages at http://www.wxwindows.org/Mahogany/\n"
 "\n"
-"Also, reply to this e-mail message and you will automatically be\n"
-"added to the mailing list of Mahogany users, where you will find\n"
-"other users happy to share their experiences with you and help you\n"
-"get started.\n"
+"Also, reply to this e-mail message with 'subscribe'in the subject line\n"
+"or in the body of the message and you will automatically be added\n"
+"to the mailing list of Mahogany users, where you will find other users\n"
+"happy to share their experiences with you and help you get started.\n"
 "\n"
 "Your Mahogany Developers Team\n"
 msgstr ""
@@ -1222,7 +1222,7 @@ msgid ""
 "Thank you!"
 msgstr ""
 "De applicatie is niet normaal beëindigd.\n"
-"Rapporteer aub. de bug aan m-developers@makelist.com\n"
+"Rapporteer aub. de bug aan mahogany-developers@lists.sourceforge.net\n"
 "Dank u!"
 
 # wxMenuDefs.cpp:251
@@ -1324,7 +1324,7 @@ msgid ""
 "An unrecoverable internal error has occured.\n"
 "The application will shut down now. Please take\n"
 "a note of the error message and report it to\n"
-"m-developers@egroups.com\n"
+"mahogany-developers@lists.sourceforge.net\n"
 "\n"
 "Internal error message:\n"
 "\n"
