--- a/locale/pt_BR.po
+++ b/locale/pt_BR.po
@@ -6,7 +6,7 @@ msgstr ""
 "POT-Creation-Date: 2000-06-11 14:55+0100\n"
 "PO-Revision-Date: 1999-07-16 12:00-0300\n"
 "Last-Translator: Carlos Henrique Bauer <bauer@atlas.unisinos.tche.br>\n"
-"Language-Team: M-Team <m-developers@makelist.com>\n"
+"Language-Team: M-Team <mahogany-developers@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8-bit\n"
@@ -284,7 +284,7 @@ msgstr "Mahogany: seleção de pasta"
 #: upgrade.cpp:1091
 #, c-format
 msgid ""
-"From: m-users-subscribe@egroups.com\n"
+"From: mahogany-users-request@lists.sourceforge.net\n"
 "Subject: Welcome to Mahogany!\n"
 "Date: %s\n"
 "\n"
@@ -300,10 +300,10 @@ msgid ""
 "\n"
 "Please visit our web pages at http://www.wxwindows.org/Mahogany/\n"
 "\n"
-"Also, reply to this e-mail message and you will automatically be\n"
-"added to the mailing list of Mahogany users, where you will find\n"
-"other users happy to share their experiences with you and help you\n"
-"get started.\n"
+"Also, reply to this e-mail message with 'subscribe'in the subject line\n"
+"or in the body of the message and you will automatically be added\n"
+"to the mailing list of Mahogany users, where you will find other users\n"
+"happy to share their experiences with you and help you get started.\n"
 "\n"
 "Your Mahogany Developers Team\n"
 msgstr ""
@@ -1080,7 +1080,7 @@ msgid ""
 "Thank you!"
 msgstr ""
 "O programa está terminando de modo anormal.\n"
-"Por favor, reporte o problema para m-developers@makelist.com.\n"
+"Por favor, reporte o problema para mahogany-developers@lists.sourceforge.net.\n"
 "Obrigado!"
 
 #: wxMApp.cpp:356
@@ -1166,7 +1166,7 @@ msgid ""
 "An unrecoverable internal error has occured.\n"
 "The application will shut down now. Please take\n"
 "a note of the error message and report it to\n"
-"m-developers@egroups.com\n"
+"mahogany-developers@lists.sourceforge.net\n"
 "\n"
 "Internal error message:\n"
 "\n"
