--- a/locale/de.po
+++ b/locale/de.po
@@ -2076,7 +2076,7 @@ msgid ""
 "\n"
 "Your Mahogany Developers Team\n"
 msgstr ""
-"From: mahogany-users-request@lists.sourceforge.net\n"
+"From: mahogany-users-help@lists.sourceforge.net\n"
 "Subject: Willkommen bei Mahogany!\n"
 "Date: %s\n"
 "\n"
