--- a/locale/it.po
+++ b/locale/it.po
@@ -2057,7 +2057,7 @@ msgid ""
 "\n"
 "Your Mahogany Developers Team\n"
 msgstr ""
-"From: m-users-subscribe@egroups.com\n"
+"From: mahogany-users-help@lists.sourceforge.net\n"
 "Subject: Benvenuto in Mahogany!\n"
 "Date: %s\n"
 "\n"
@@ -3007,7 +3007,7 @@ msgstr ""
 "Si e verificato un errore interno irreversibile.\n"
 "Il programma ora si chiuder . Si prega prendere\n"
 "nota dei messaggi di errore e mandarli a\n"
-"m-developers@egroups.com\n"
+"http://www.wxwindows.org/m-bugs\n"
 "\n"
 "Messaggio di errore interno:\n"
 "\n"
