--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 (next release) on (date of next release)
+30.09.00 VZ: allow sending mail to the addresses without the hostname part
 30.09.00 KB: added mail delivery via sendmail
              removed assert for wxFONTENCODING_DEFAULT encoding in SendMessageCC.cpp
              improved libmal error/status reporting, updated German translations
