--- a/locale/it.po
+++ b/locale/it.po
@@ -2100,7 +2100,7 @@ msgid ""
 "\n"
 "Your Mahogany Developers Team\n"
 msgstr ""
-"From: m-users-subscribe@egroups.com\n"
+"From: mahogany-users-help@lists.sourceforge.net\n"
 "Subject: Benvenuto in Mahogany!\n"
 "Date: %s\n"
 "\n"
@@ -3064,7 +3064,7 @@ msgstr ""
 "Si è verificato un errore interno irreversibile.\n"
 "Il programma ora si chiuderà. Si prega di prendere\n"
 "nota dei messaggi di errore e di mandarli a\n"
-"m-developers@egroups.com\n"
+"mahogany-developers@lists.sourceforge.net\n"
 "\n"
 "Messaggio di errore interno:\n"
 "\n"
