--- a/doc/Manual.lyx
+++ b/doc/Manual.lyx
@@ -554,7 +554,7 @@ extra/src
  subdirectory.
  Please check the files in the individual directories for their copyright
  notices.
- However, they can freely distributed under certain conditions.
+ However, they can be freely distributed under certain conditions.
 \layout Subsubsection
 
 Why not the GPL/BSD/QPL/my favourite license?
