added and documented "Import folder tree" command

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
 Release 0.61 'Hawkins'
 -------------------------------------------------------------------------------
 
+27.11.00 VZ: added "Import file folders" from directory command
 09.11.00 VZ: added "Save addresses from message" command
 
 Release 0.60 'Redmond' November 9, 2000
