new bugzilla location

--- a/TODO
+++ b/TODO
@@ -10,7 +10,7 @@ $Id$
 
 
 *** PLEASE DO NOT USE THIS FILE ANYMORE BUT ADD NEW BUGS
-    TO THE BUGTRACKER at http://www.wxwindows.org/m-bugs/
+    TO THE BUGTRACKER at http://mahogany.sourceforge.net/bugz/
 
     JUST CONTINUE TO REMOVE BUGS FROM THIS LIST AS THEY ARE 
     FIXED.
