--- a/doc/Manual.lyx
+++ b/doc/Manual.lyx
@@ -230,7 +230,7 @@ Known bugs:
  
 \layout Itemize
 
-There are always some, listed on our bugtracker at http://www.wxwindows.org/m-bugs
+There are always some, listed on our bugtracker at http://mahogany.sourceforge.net/bugz
 / and we are working on them.
 \layout Itemize
 
